--- a/manifest.json
+++ b/manifest.json
@@ -3,38 +3,18 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "This extension was created by Phoebe",
-  "homepage_url": "https://github.com/PhoebePan",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/reload.png",
+    "48": "icons/reload.png",
+    "128": "icons/reload.png"
   },
   "default_locale": "en",
-  "page_action": {
-    "default_icon": "icons/icon19.png",
+  "browser_action": {
+    "default_icon": "icons/reload.png",
     "default_title": "page action demo",
-    "default_popup": "src/page_action/page_action.html"
+    "default_popup": "popup.html"
   },
   "permissions": [
-    "contentSettings",
-    "contextMenus"
-  ],
-  "content_scripts": [
-    {
-      "matches": [
-        "https://www.google.com/*"
-      ],
-      "css": [
-        "src/inject/inject.css"
-      ]
-    },
-    {
-      "matches": [
-        "https://www.google.com/*"
-      ],
-      "js": [
-        "src/inject/inject.js"
-      ]
-    }
+      "tabs"
   ]
 }
